# hs-onnxruntime

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  HACKING.md  README.md  Setup.hs  cabal.project  hie.yaml  hie.yml  onnxruntime-capi.cabal  onnxruntime-hs.cabal  onnxruntime.cabal  vehicle-onnxruntime.cabal
.github/actions/setup-onnxruntime/: action.yaml
.github/workflows/: ci.yaml
app/: Main.hs
cbits/: onnxruntime.c  onnxruntimeHS.c  vehicle_onnxruntime.c
hs-onnxruntime-capi/: NOTICE  hs-onnxruntime-capi.cabal
hs-onnxruntime-capi-test/: NOTICE  hs-onnxruntime-capi-test.cabal
hs-onnxruntime-capi-test/test/: Main.hs
hs-onnxruntime-capi-test/test/Test/Onnxruntime/: CApi.hs
hs-onnxruntime-capi/src/Onnxruntime/: CApi.hsc
include/: onnxruntime.h  onnxruntimeHS.h  vehicle_onnxruntime.h
scripts/: dev-dependencies.txt
src/: OnnxRuntime.chs  OnnxRuntime.hs  OnnxRuntime.hsc
src/Foreign/C/ConstPtr/: Compat.hs
src/Onnx/: Runtime.hs
src/Onnx/Runtime/: Internal.chs
src/OnnxRuntime/: Bindings.chs
src/Onnxruntime/: CApi.hsc
src/Vehicle/: OnnxRuntime.chs  OnnxRuntime.hs
src/Vehicle/OnnxRuntime/: Bindings.chs  Bindings.hs
test/: Main.hs
test/Test/Onnxruntime/: CApi.hs
