cabal-version: 3.4
build-type:    Simple
name:          onnxruntime-capi
version:       0.1.0.0
license:       AGPL-3.0-only
author:        Wen Kokke
copyright:     Copyright (c) 2025 Wen Kokke and Well-Typed LLP
license-files:
  LICENSE
  NOTICE
extra-source-files:
  include/onnxruntime_c_api.h

flag pkg-config
  default:     True
  manual:      False
  description:
    Use @pkg-config@ executable to locate foreign @onnxruntime@ library.

flag use-bundled-header
  default:     True
  manual:      True
  description:
    Use bundled copy of @onnxruntime_c_api.h@ header file

common language
  ghc-options:
    -Wall -Wcompat -Wredundant-constraints
    -Wunticked-promoted-constructors -Wunused-packages

  default-language:   GHC2021
  default-extensions: ImportQualifiedPost

  if impl(ghc <9.6.1)
    if os(osx)
      ghc-options: -optc=-Wno-incompatible-pointer-types-discards-qualifiers

    else
      ghc-options: -optc=-Wno-discarded-qualifiers

library
  import:             language
  exposed-modules:    Onnxruntime.CApi
  other-modules:      Foreign.C.ConstPtr.Compat
  build-tool-depends: hsc2hs:hsc2hs
  hs-source-dirs:     src
  build-depends:
    , base        >=4.13  && <5
    , bytestring  ^>=0.12
    , vector      ^>=0.13

  if flag(use-bundled-header)
    includes:     onnxruntime_c_api.h
    include-dirs: include

  if flag(pkg-config)
    pkgconfig-depends: libonnxruntime >=1.21

  else
    extra-libraries: onnxruntime

test-suite onnxruntime-capi
  import:         language
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  other-modules:  Test.Onnxruntime.CApi
  build-depends:
    , base
    , onnxruntime-capi
    , tasty             ^>=1.5
    , tasty-hunit       ^>=0.10
    , vector            ^>=0.13
