cabal-version:      3.0
name:               onnxruntime-hs
version:            0.1.10.0
license:            BSD-3-Clause
author:             Wen Kokke
maintainer:         wenkokke@users.noreply.github.com
extra-source-files:
  cbits/onnxruntimeHS.c
  CHANGELOG.md
  include/onnxruntimeHS.h

library
  exposed-modules:  OnnxRuntime
  hs-source-dirs:   src
  build-depends:    base
  extra-libraries:  onnxruntime
  include-dirs:     include
  includes:         include/onnxruntimeHS.h
  install-includes: include/onnxruntimeHS.h
  c-sources:        cbits/onnxruntimeHS.c
  default-language: Haskell2010

executable onnxruntime-version
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:
    , base
    , onnxruntime-hs

  default-language: Haskell2010
