cabal-version:      3.0
name:               onnxruntime-hs
version:            0.1.10.0
license:            BSD-3-Clause
author:             Wen Kokke
maintainer:         wenkokke@users.noreply.github.com
extra-source-files:
  cbits/onnxruntimeHS.c
  CHANGELOG.md
  include/onnxruntimeHS.h

library
  exposed-modules:    Onnx.Runtime
  other-modules:      Onnx.Runtime.Internal
  hs-source-dirs:     src
  build-depends:      base
  extra-libraries:    onnxruntime
  default-language:   Haskell2010
  build-tool-depends: c2hs:c2hs -any

executable onnxruntime-version
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:
    , base
    , onnxruntime-hs

  default-language: Haskell2010
