cabal-version:      3.0
name:               onnxruntime
version:            0.1.10.0
license:            BSD-3-Clause
author:             Wen Kokke
maintainer:         wenkokke@users.noreply.github.com
extra-source-files:
  cbits/onnxruntime.c
  CHANGELOG.md
  include/onnxruntime.h

executable onnxruntime-version
  main-is:            Main.hs
  hs-source-dirs:     app src
  other-modules:
    OnnxRuntime
    OnnxRuntime.Bindings

  build-depends:
    , base
    , resourcet  >=1.2.6

  default-language:   Haskell2010
  extra-libraries:    onnxruntime
  build-tool-depends: c2hs:c2hs -any
  c-sources:          cbits/onnxruntime.c
  include-dirs:       include cbits
  includes:           include/onnxruntime.h
  install-includes:   include/onnxruntime.h
