cabal-version:      3.0
build-type:         Custom
name:               onnxruntime
version:            0.1.10.0
license:            BSD-3-Clause
author:             Wen Kokke
maintainer:         wenkokke@users.noreply.github.com
extra-source-files:
  cbits/onnxruntime.c
  CHANGELOG.md
  include/onnxruntime.h

custom-setup
  setup-depends:
    , base
    , Cabal

executable onnxruntime-version
  main-is:                 Main.hs
  hs-source-dirs:          app src
  other-modules:
    OnnxRuntime
    OnnxRuntime.Bindings

  build-depends:
    , base
    , resourcet  >=1.2.6

  default-language:        Haskell2010
  extra-bundled-libraries: libonnxruntime
  build-tool-depends:      c2hs:c2hs -any
  c-sources:               cbits/onnxruntime.c
  include-dirs:            include cbits vendor/onnxruntime/include
  includes:
    include/onnxruntime.h
    vendor/onnxruntime/include/onnxruntime/core/session/onnxruntime_c_api.h

  install-includes:
    include/onnxruntime.h
    vendor/onnxruntime/include/onnxruntime/core/session/onnxruntime_c_api.h
