cabal-version:      3.0
name:               vehicle-onnxruntime
version:            0.1.10.0
license:            BSD-3-Clause
author:             Wen Kokke
maintainer:         wenkokke@users.noreply.github.com
extra-source-files:
  cbits/vehicle_onnxruntime.c
  CHANGELOG.md
  include/vehicle_onnxruntime.h

executable onnxruntime-version
  main-is:          Main.hs
  hs-source-dirs:   app, src

  other-modules:      Vehicle.OnnxRuntime
  build-depends:      base
  default-language:   Haskell2010
  build-tool-depends: c2hs:c2hs -any

  C-sources:          cbits/vehicle_onnxruntime.c
  Include-dirs:       include, cbits
  Includes:           include/vehicle_onnxruntime.h
  Install-includes:   include/vehicle_onnxruntime.h