cabal-version:      3.0
name:               vehicle-onnxruntime
version:            0.1.10.0
license:            BSD-3-Clause
author:             Wen Kokke
maintainer:         wenkokke@users.noreply.github.com
extra-source-files:
  cbits/vehicle_onnxruntime.c
  CHANGELOG.md
  include/vehicle_onnxruntime.h

executable onnxruntime-version
  main-is:          Main.hs
  hs-source-dirs:   app src
  other-modules:
    Vehicle.OnnxRuntime
    Vehicle.OnnxRuntime.Bindings

  build-depends:
    , base
    , resourcet  >=1.2.6

  default-language: Haskell2010
  extra-libraries:  onnxruntime
  c-sources:        cbits/vehicle_onnxruntime.c
  include-dirs:     include cbits
  includes:         include/vehicle_onnxruntime.h
  install-includes: include/vehicle_onnxruntime.h
